test/failing/badintfield6.trunnel

struct x {
   u8 a;
   nulterm b;
   union u[a] with length b {
     1 : u8 x;
     2 : u16 y;
   };
}

